<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_entry_description"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="?android:attr/textColorPrimary"
        android:fontFamily="@font/ropa_sans_regular"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/text_view_entry_time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:layout_marginStart="8dp"
        android:layout_below="@id/text_view_entry_description"/>

    <TextView
        android:id="@+id/text_view_entry_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/text_view_entry_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:gravity="end"
        android:text="@string/in"
        android:layout_below="@id/text_view_entry_amount"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"/>

</RelativeLayout>