<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/group_entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"

        android:text="@string/title"
        android:textColor="?android:attr/textColorPrimary"
        android:textFontWeight="400"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/entry_timeStamp_tv_groupLedger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_entry_title"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ropa_sans_regular"
        android:text="@string/thu_20_jan_12_37_am"
        android:textFontWeight="400"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/entry_amount_tv_singleGroupLedger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ropa_sans_regular"
        android:text="@string/_00_00"
        android:textColor="@color/red"
        android:textFontWeight="400"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/entry_modeFlag_tv_groupLedger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_entry_title"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ropa_sans_regular"
        android:text="@string/cash_out"
        android:textFontWeight="400"
        android:textSize="18sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/entry_timeStamp_tv_groupLedger" />
</RelativeLayout>