<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cashregister.ui.entries.EntriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/main_gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/round_corner_background"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ropa_sans_regular"
            android:text="@string/available_cash"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_available_cash_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textSize="25sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_dodgeInsetEdges="bottom"
        android:layout_gravity="bottom|center">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cash_out"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cash_out"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:background="@drawable/button_shape"
        android:layout_margin="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cash_in"
        android:width="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash_in"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/green"
        android:layout_margin="8dp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>