<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:paddingStart="58dp"
    android:paddingEnd="58dp"
    android:background="@drawable/main_gradient_background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/ropa_sans_regular"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tflayout_username_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        style="@style/TextInputLayoutStyle"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/icon_username"
        app:startIconTint="@color/white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_username_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/shape"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tflayout_password_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tflayout_username_signUp"
        style="@style/TextInputLayoutStyle"
        app:hintTextColor="@color/white"

        app:startIconDrawable="@drawable/icon_password"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_password_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/white"


            android:textCursorDrawable="@drawable/shape"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_signup_signUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:layout_marginTop="92dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/ropa_sans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tflayout_password_signUp"
        android:backgroundTint="@color/puce"
        android:background="@drawable/button_shape"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/ropa_sans_regular"
        android:text="@string/already_have_an_account"

        android:textColor="@color/white"

        android:textFontWeight="400"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/bt_signup_signUp"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/bt_signup_signUp"></TextView>

    <TextView
        android:id="@+id/tv_login_new_account_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ropa_sans_regular"
        android:text="@string/log_in"
        android:textColor="@color/puce"
        android:textFontWeight="400"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
android:layout_marginLeft="3dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>